--- a/ui/app/templates/components/secret-delete-menu.hbs
+++ b/ui/app/templates/components/secret-delete-menu.hbs
@@ -49,12 +49,12 @@
           {{#if (or this.canSoftDeleteSecretData this.canDeleteSecretData)}}
             <div class="modal-radio-button" data-test-delete-modal="delete-version">
               <RadioButton
+                id="delete-version"
+                name="setup-deleteType"
+                class="radio"
                 @value={{if this.canSoftDeleteSecretData "soft-delete" "delete-latest-version"}}
-                @radioClass="radio"
                 @groupValue={{this.deleteType}}
-                @changed={{action (mut this.deleteType)}}
-                @name="setup-deleteType"
-                @radioId="delete-version"
+                @onChange={{fn (mut this.deleteType)}}
               />
               <div class="helper-text">
                 <label for="delete-version" data-test-type-select="delete-version"><strong>Delete this version</strong></label>
@@ -70,12 +70,12 @@
         {{#if this.canDestroyVersion}}
           <div class="modal-radio-button" data-test-delete-modal="destroy-version">
             <RadioButton
+              id="destroy-version"
+              name="setup-deleteType"
+              class="radio"
               @value="destroy"
-              @radioClass="radio"
               @groupValue={{this.deleteType}}
-              @changed={{action (mut this.deleteType)}}
-              @name="setup-deleteType"
-              @radioId="destroy-version"
+              @onChange={{fn (mut this.deleteType)}}
             />
             <div class="helper-text">
               <label for="destroy-version" data-test-type-select="destroy-version"><strong>Destroy this version</strong></label>
@@ -91,12 +91,12 @@
       {{#if this.canDestroyAllVersions}}
         <div class="modal-radio-button" data-test-delete-modal="destroy-all-versions">
           <RadioButton
+            id="destroy-all-versions"
+            name="setup-deleteType"
+            class="radio"
             @value="destroy-all-versions"
-            @radioClass="radio"
             @groupValue={{this.deleteType}}
-            @changed={{action (mut this.deleteType)}}
-            @name="setup-deleteType"
-            @radioId="destroy-all-versions"
+            @onChange={{fn (mut this.deleteType)}}
           />
           <div class="helper-text">
             <label for="destroy-all-versions" data-test-replication-type-select="destroy-all-versions">
