--- a/ui/app/templates/components/mfa-login-enforcement-form.hbs
+++ b/ui/app/templates/components/mfa-login-enforcement-form.hbs
@@ -3,14 +3,15 @@
     for="name"
     @label="Name"
     @subText="The name for this enforcement. Giving it a name means that you can refer to it again later. This name will not be editable later."
+    data-test-mlef-label="name"
   />
   <input
-    data-test-input="name"
     autocomplete="off"
     spellcheck="false"
     value={{@model.name}}
     disabled={{not @model.isNew}}
     class="input field"
+    data-test-mlef-input="name"
     {{on "input" (pipe (pick "target.value") (fn (mut @model.name)))}}
   />
   {{#if this.errors.name.errors}}
@@ -19,7 +20,12 @@
 
   {{#unless @isInline}}
     <div class="field">
-      <FormFieldLabel for="methods" @label="MFA methods" @subText="The MFA method(s) that this enforcement will apply to." />
+      <FormFieldLabel
+        for="methods"
+        @label="MFA methods"
+        @subText="The MFA method(s) that this enforcement will apply to."
+        data-test-mlef-label="methods"
+      />
       {{! component only computes inputValue on init -- ensure Ember Data hasMany promise has resolved }}
       {{#if @model.mfa_methods.isFulfilled}}
         <SearchSelect
@@ -29,6 +35,7 @@
           @disallowNewItems={{true}}
           @models={{array "mfa-method"}}
           @onChange={{this.onMethodChange}}
+          data-test-mlef-search="methods"
         />
       {{/if}}
       {{#if this.errors.mfa_methods.errors}}
@@ -42,9 +49,10 @@
       for="targets"
       @label="Targets"
       @subText="The list of authentication types, authentication mounts, groups, and/or entities that will require this MFA configuration."
+      data-test-mlef-label="targets"
     />
     {{#each this.targets as |target|}}
-      <div class="is-flex-center has-border-top-light">
+      <div class="is-flex-center has-border-top-light" data-test-mlef-target={{target.label}}>
         <InfoTableRow @label={{target.label}} class="is-flex-1 has-no-shadow">
           {{#if target.value.id}}
             {{target.value.name}}
@@ -53,7 +61,12 @@
             {{target.value}}
           {{/if}}
         </InfoTableRow>
-        <button type="button" class="button" {{on "click" (fn this.removeTarget target)}}>
+        <button
+          type="button"
+          class="button"
+          data-test-mlef-remove-target={{target.label}}
+          {{on "click" (fn this.removeTarget target)}}
+        >
           <Icon @name="trash" />
         </button>
       </div>
@@ -65,10 +78,17 @@
         @valueAttribute="type"
         @selectedValue={{this.selectedTargetType}}
         @onChange={{this.onTargetSelect}}
+        data-test-mlef-select="target-type"
       />
       <div class="has-left-margin-s is-flex-1">
         {{#if (eq this.selectedTargetType "accessor")}}
-          <MountAccessorSelect @showAccessor={{true}} @noDefault={{true}} @onChange={{this.setTargetValue}} />
+          <MountAccessorSelect
+            @value={{this.selectedTargetValue}}
+            @showAccessor={{true}}
+            @noDefault={{true}}
+            @onChange={{this.setTargetValue}}
+            data-test-mlef-select="accessor"
+          />
         {{else if (eq this.selectedTargetType "method")}}
           <Select
             @options={{this.authMethods}}
@@ -78,6 +98,7 @@
             @noDefault={{true}}
             @selectedValue={{this.selectedTargetValue}}
             @onChange={{this.setTargetValue}}
+            data-test-mlef-select="auth-method"
           />
         {{else}}
           <SearchSelect
@@ -88,6 +109,7 @@
             @shouldRenderName={{true}}
             @selectLimit={{1}}
             @onChange={{this.setTargetValue}}
+            data-test-mlef-search={{this.selectedTargetType}}
           />
         {{/if}}
       </div>
@@ -95,6 +117,7 @@
         type="button"
         class="button has-left-margin-s"
         disabled={{not this.selectedTargetValue}}
+        data-test-mlef-add-target
         {{on "click" this.addTarget}}
       >
         Add
@@ -111,11 +134,18 @@
         type="button"
         class="button is-primary {{if this.save.isRunning 'is-loading'}}"
         disabled={{this.save.isRunning}}
+        data-test-mlef-save
         {{on "click" (perform this.save)}}
       >
         {{if @model.isNew "Create" "Update"}}
       </button>
-      <button type="button" class="button has-left-margin-s" disabled={{this.save.isRunning}} {{on "click" this.cancel}}>
+      <button
+        type="button"
+        class="button has-left-margin-s"
+        disabled={{this.save.isRunning}}
+        data-test-mlef-cancel
+        {{on "click" this.cancel}}
+      >
         Cancel
       </button>
     </div>
