--- a/ui/app/templates/components/mfa-login-enforcement-form.hbs
+++ b/ui/app/templates/components/mfa-login-enforcement-form.hbs
@@ -87,6 +87,7 @@
             @showAccessor={{true}}
             @noDefault={{true}}
             @onChange={{this.setTargetValue}}
+            @filterToken={{true}}
             data-test-mlef-select="accessor"
           />
         {{else if (eq this.selectedTargetType "method")}}
