--- a/ui/app/templates/components/mount-accessor-select.hbs
+++ b/ui/app/templates/components/mount-accessor-select.hbs
@@ -1,9 +1,9 @@
-{{#if this.label}}
-  <label for={{this.name}} class="is-label">
-    {{this.label}}
-    {{#if this.helpText}}
+{{#if @label}}
+  <label for={{@name}} class="is-label">
+    {{@label}}
+    {{#if @helpText}}
       <InfoTooltip>
-        <span data-test-help-text>{{this.helpText}}</span>
+        <span data-test-help-text>{{@helpText}}</span>
       </InfoTooltip>
     {{/if}}
   </label>
@@ -15,23 +15,23 @@
 {{else if this.authMethods.last.value}}
   <div class="control is-expanded">
     <div class="select is-fullwidth">
-      <select name={{this.name}} id={{this.name}} onchange={{action "change" value="target.value"}}>
-        {{#if this.noDefault}}
+      <select name={{@name}} id={{@name}} {{on "change" this.change}}>
+        {{#if @noDefault}}
           <option value="">Select one</option>
         {{/if}}
         {{#each this.authMethods.last.value as |method|}}
           {{! token type does not need to be authorized via MFA }}
-          {{#if this.filterToken}}
+          {{#if @filterToken}}
             {{#if (not-eq method.id "token")}}
-              <option selected={{eq this.value method.accessor}} value={{method.accessor}}>
+              <option selected={{eq @value method.accessor}} value={{method.accessor}}>
                 {{method.path}}
-                ({{if this.showAccessor method.accessor method.type}})
+                ({{if @showAccessor method.accessor method.type}})
               </option>
             {{/if}}
           {{else}}
-            <option selected={{eq this.value method.accessor}} value={{method.accessor}}>
+            <option selected={{eq @value method.accessor}} value={{method.accessor}}>
               {{method.path}}
-              ({{if this.showAccessor method.accessor method.type}})
+              ({{if @showAccessor method.accessor method.type}})
             </option>
           {{/if}}
         {{/each}}
@@ -40,11 +40,11 @@
   </div>
 {{else}}
   <input
-    name={{this.name}}
-    id={{this.name}}
+    name={{@name}}
+    id={{@name}}
     class="input"
-    value={{this.value}}
+    value={{@value}}
     placeholder="Mount accessor"
-    onchange={{action "change" value="target.value"}}
+    {{on "change" this.change}}
   />
 {{/if}}
